first page done

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashtrofolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section>
+    <div class="half-width">
+        <h1>Welcome to</h1>
+    <h1><span class="orange-color">AshtrovArt</span> World!</h1>
+    <h3>Mission being a Web Developer</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quaerat, error modi iste aspernatur recusandae harum laboriosam quibusdam porro perferendis! Ab laboriosam earum aut ipsa commodi. Qui amet placeat repudiandae quas voluptatibus voluptates. Libero aliquam earum voluptatibus aliquid sed ullam dolorum ducimus! Eos eaque voluptatum maiores ullam non nemo possimus ex itaque dolores inventore harum error doloremque, repellendus repudiandae quisquam amet modi, officia sequi iste dolor suscipit facilis cupiditate quae illo. Repellendus, iste.</p>
+    <a href="https://www.linkedin.com/in/ashtrovarts/">HIRE ME</a>
+    </div>
+    <div class="half-width">
+        <img src="image/ash3.png">
+    </div>
+</section>
 </body>
 </html>
