--- a/index.html
+++ b/index.html
@@ -16,11 +16,22 @@
         <h1>Welcome to</h1>
     <h1><span class="orange-color">AshtrovArt</span> World!</h1>
     <h3>Mission being a Web Developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quaerat, error modi iste aspernatur recusandae harum laboriosam quibusdam porro perferendis! Ab laboriosam earum aut ipsa commodi. Qui amet placeat repudiandae quas voluptatibus voluptates. Libero aliquam earum voluptatibus aliquid sed ullam dolorum ducimus! Eos eaque voluptatum maiores ullam non nemo possimus ex itaque dolores inventore harum error doloremque, repellendus repudiandae quisquam amet modi, officia sequi iste dolor suscipit facilis cupiditate quae illo. Repellendus, iste.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quaerat, error modi iste aspernatur recusandae harum laboriosam quibusdam porro perferendis! Ab laboriosam earum aut ipsa commodi. Qui amet placeat repudiandae quas voluptatibus voluptates. Libero aliquam earum voluptatibus aliquid sed ullam dolorum ducimus! Eos eaque voluptatum maiores ullam non nemo possimus ex itaque dolores inventore harum error doloremque, repellendus repudiandae quisquam amet modi, officia sequi iste dolor suscipit facilis cupiditate quae illo. Repellendus, iste.</p><br>
     <a class="link-button" target="blank" href="https://www.linkedin.com/in/ashtrovarts/">HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="image/ash3.png">
+    </div>
+</section>
+<section class="dream-big">
+    <div class="half-width">
+        <img src="image/ash.png" alt="Ashek Rabbani Image">
+    </div>
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become A Web Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsa nemo itaque veritatis! Explicabo odit minus beatae delectus adipisci nostrum culpa fugit, enim laudantium sapiente necessitatibus molestiae maiores voluptas debitis dolor similique aspernatur minima. Ab voluptatibus culpa expedita corrupti eius. Architecto maxime ad error possimus repellat fugiat, aliquid modi. Laudantium assumenda nihil consequatur dolore. Similique doloremque sit beatae inventore laborum officia est pariatur iure, id, necessitatibus magni qui! Sunt rerum, porro veniam, eos iure perferendis totam, obcaecati hic maxime nostrum quia fuga ab optio modi dignissimos.</p><br>        
+        <a class="link-button" target="blank" href="https://www.linkedin.com/in/ashtrovarts/">DOWNLOAD RESUME</a>
     </div>
 </section>
 </body>
