last part added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="top-banner">
+<section class="top-banner flexible-container">
     <div class="half-width">
         <h1>Welcome to</h1>
     <h1><span class="orange-color">AshtrovArt</span> World!</h1>
@@ -23,7 +23,7 @@
         <img src="image/ash3.png">
     </div>
 </section>
-<section class="dream-big">
+<section class="dream-big flexible-container">
     <div class="half-width">
         <img src="image/ash.png" alt="Ashek Rabbani Image">
     </div>
@@ -32,6 +32,21 @@
         <h3>Become A Web Developer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsa nemo itaque veritatis! Explicabo odit minus beatae delectus adipisci nostrum culpa fugit, enim laudantium sapiente necessitatibus molestiae maiores voluptas debitis dolor similique aspernatur minima. Ab voluptatibus culpa expedita corrupti eius. Architecto maxime ad error possimus repellat fugiat, aliquid modi. Laudantium assumenda nihil consequatur dolore. Similique doloremque sit beatae inventore laborum officia est pariatur iure, id, necessitatibus magni qui! Sunt rerum, porro veniam, eos iure perferendis totam, obcaecati hic maxime nostrum quia fuga ab optio modi dignissimos.</p><br>        
         <a class="link-button" target="blank" href="https://www.linkedin.com/in/ashtrovarts/">DOWNLOAD RESUME</a>
+    </div>
+</section>
+<section class="experience-area">
+    <h1>Experiences</h1>
+    <div class="flexible-container">
+        <div class="half-width">
+            <h1>Full Stack Developer</h1>
+            <h3>2022-Present | Pro Level Web developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias repellat accusamus expedita distinctio minus quisquam temporibus sed error provident enim. Officia officiis beatae, in eveniet reprehenderit voluptatibus modi eius vel? Quae voluptates dolore quidem error provident, explicabo magnam animi soluta. Quam sed reiciendis aut voluptatum ea temporibus aperiam laborum obcaecati.</p>
+        </div>
+        <div class="half-width">
+            <h1>Baccha Web Developer</h1>
+            <h3>2020-2021 | Hero Learner at Programming Hero</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium numquam officia consectetur dicta sed unde cumque? Ea at odio eum corporis, ipsum consequuntur veniam, voluptates dicta esse autem, rerum asperiores repellendus porro officia facilis sint ducimus accusantium reiciendis magni modi ut. Facilis ducimus maxime odit!</p>
+        </div>
     </div>
 </section>
 </body>
