semi final done

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 <section class="experience-area">
     <h1>Experiences</h1>
     <div class="flexible-container">
-        <div class="half-width">
-            <h1>Full Stack Developer</h1>
-            <h3>2022-Present | Pro Level Web developer</h3>
+        <div class="exp-item">
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange-color">2022-Present | Pro Level Web developer</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias repellat accusamus expedita distinctio minus quisquam temporibus sed error provident enim. Officia officiis beatae, in eveniet reprehenderit voluptatibus modi eius vel? Quae voluptates dolore quidem error provident, explicabo magnam animi soluta. Quam sed reiciendis aut voluptatum ea temporibus aperiam laborum obcaecati.</p>
         </div>
-        <div class="half-width">
-            <h1>Baccha Web Developer</h1>
-            <h3>2020-2021 | Hero Learner at Programming Hero</h3>
+        <div class="exp-item">
+            <h2>Baccha Web Developer</h2>
+            <h3 class="orange-color">2020-2021 | Hero Learner at Programming Hero</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium numquam officia consectetur dicta sed unde cumque? Ea at odio eum corporis, ipsum consequuntur veniam, voluptates dicta esse autem, rerum asperiores repellendus porro officia facilis sint ducimus accusantium reiciendis magni modi ut. Facilis ducimus maxime odit!</p>
         </div>
     </div>
