--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     </div>
 </section>
 <section class="experience-area">
-    <h1>Experiences</h1>
+    <h1 class="exp-title">Experiences</h1>
     <div class="flexible-container">
-        <div class="exp-item">
+        <div id="full-stack" class="exp-item">
             <h2>Full Stack Developer</h2>
             <h3 class="orange-color">2022-Present | Pro Level Web developer</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias repellat accusamus expedita distinctio minus quisquam temporibus sed error provident enim. Officia officiis beatae, in eveniet reprehenderit voluptatibus modi eius vel? Quae voluptates dolore quidem error provident, explicabo magnam animi soluta. Quam sed reiciendis aut voluptatum ea temporibus aperiam laborum obcaecati.</p>
         </div>
-        <div class="exp-item">
+        <div id="baccha-web" class="exp-item">
             <h2>Baccha Web Developer</h2>
             <h3 class="orange-color">2020-2021 | Hero Learner at Programming Hero</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium numquam officia consectetur dicta sed unde cumque? Ea at odio eum corporis, ipsum consequuntur veniam, voluptates dicta esse autem, rerum asperiores repellendus porro officia facilis sint ducimus accusantium reiciendis magni modi ut. Facilis ducimus maxime odit!</p>
@@ -50,4 +50,5 @@
     </div>
 </section>
 </body>
+<footer class="footer">© AshtovArt Studio 2023 | A Student of Programming Hero Batch-06.</footer>
 </html>
